**** Changes ****

v2.0 (November 2006)
----
 - changed the behaviour of the full caching method: now loads all the table into memory
 - aliases tag for column names
 - manual definition of imported and exported keys
 - optimized reflection code in ExternalObjectWrapper
 - case used in context can now be set using the system property velosurf.case
 - cleaned behaviour of RowIterator: hasNext() can now be called sereval times per iteration
 - Velosurf now has a functional DTD - thenks to Mike Kienenberger
 - suppressed the autofetching feature (can be implemented by a custom filter)
 - last inserted ID is now hold by the user context
 - localized messages can now have arguments
 - build files moved under the /build/ directory
 - reverse enginering of imported and exported keys, new reverse level ("tables")
 - removed unused method vel.sql.Database.readConfigFile(String file)
 - XInclude basic inclusion mechanism
 - new method velosurf.Velosurf.setConfigFile to facilitate VPP inclusion
   the velosurf.Velosurf class now does a late initialization.
 - HSQLDB infos updated in DriverInfo
 - renamed DataAccessor to ReadOnlyMap and MapDataAccessor to ReadOnlyWrapper
 - HttpQueryTool now inherits org.apache.velocity.tools.view.tools.ParameterParser
 - bugfix: Entity.fetch(Number) no longer bypass obfuscation
 - DriverInfo now has an ignorePrefix String per driver (should be generalized with a regex)
 - added an EntityReference.getName() method which returns the name of the wrapped entity.
 - bugfix: rewrote code for transactions which did not ensure a proper isolation
 - the ConnectionWrapper busy state is now an integer, to allow imbriqued busy states
 - created a UserContext map (that is stored in the session in a webapp context):
   contains sql error messages, validation error messages and localizer.
 - blackbox testcases using Jetty and HttpUnit
 - whitebox testcases using JUnit