@@ -2,6 +2,8 @@
 
 v2.0 (November 2006)
 ----
+ - added an ant/vpp example
+ - added a Logger.log2File(String file) method
  - changed the behaviour of the full caching method: now loads all the table into memory
  - aliases tag for column names
  - manual definition of imported and exported keys
